# ulu-main

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: failed.txt
data/Los Angeles, USA/: metadata_osm_overture.json
data/New York City, USA/: metadata_osm_overture.json
data/cities_only/: overture_locality_1.json  overture_locality_2.json
data/open/: README.md  business_registry.csv  community_pois.geojson
data/overture_cache/: buildings_limit50_458f6acf_-73.997342_40.748995_-73.973658_40.767005.json
data/overture_sample/: divisions_sample.parquet.b64
docs/: dataset_curation_plan.md  generate_semantic_dataset.md  generate_semantic_dataset_large_area.md
docs/multisource/: guide.md
docs/osm/: README.md  dataset_curation_plan.md  generate_semantic_dataset.md  generate_semantic_dataset_large_area.md
scripts/: generate_times_square.sh  generate_times_square_enriched.sh  generate_times_square_large.sh  multi-resource.sh  run_google.sh  run_google_cost_down.sh  run_osm.sh  run_osm_google.sh  run_osm_overture.sh  run_osm_overture_full.sh  run_osm_overture_full_batch.py  run_osm_overture_full_batch.sh  run_osm_overture_google.sh  run_overture.sh  run_overture_google.sh
tools/: __init__.py
tools/build_city_docs/: __init__.py  build_city_docs_cities.py  city_centers.py
tools/data_clean/: text_complete_redact.py
tools/debug/: compare_bbox_equivalence.py
tools/image_process/: README.md  convert_building_coordinates.py  visualize_buildings.py
tools/multisource/: generate_region_urban_bundle.py  (+3 more)
utils/: __init__.py  cache.py
(+9 files in other folders)
